# quadcode

./: README.md  doc.md  main.py  package-lock.json  pyproject.toml  render.yaml  temperature_nyeri.py  test_earthdata.py
app/api/v1/: weather.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/quadcode/: main.py
backend/quadcode/app/api/v1/: weather.py
backend/quadcode/app/core/: utils.py
backend/quadcode/app/models/: weather.py
backend/quadcode/app/services/: earthdata_service.py
frontend/: .dockerignore  Dockerfile  FRONTEND_README.md  data.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/components/: DayOfYearPicker.tsx  Footer.tsx  HeatmapCalendar.tsx  HistoricalTimeSeriesChart.tsx  LocationSelector.tsx  MapComponent.tsx  Navbar.tsx  ProbabilityChart.tsx  ProbabilityDistributionChart.tsx  RadarChart.tsx  ResultsPanel.tsx  ResultsVisualization.tsx  StatisticsCards.tsx  SummaryCards.tsx  ThresholdSettings.tsx  TimeSeriesChart.tsx  TrendAnalysisChart.tsx  VariableSelector.tsx
frontend/src/lib/: exportUtils.ts  mockData.ts
frontend/src/services/: api.ts
frontend/src/types/: weather.ts
